force-app/main/default/objects/Lead/fields/Acct_Oppty_Type__c.field-meta.xml
<CustomField>
    <fullName>Acct_Oppty_Type__c</fullName>
    <label>Acct Oppty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Opportunity_Type</valueSetName>
    </valueSet>
</CustomField>