force-app/main/default/objects/Lead/fields/ApproxCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ApproxCloseDate__c</fullName>
    <label>Approx Close Date</label>
    <type>Date</type>
</CustomField>