force-app/main/default/objects/Lead/fields/ApproxFinishDate__c.field-meta.xml
<CustomField>
    <fullName>ApproxFinishDate__c</fullName>
    <label>Approx Finish Date</label>
    <type>Date</type>
</CustomField>