force-app/main/default/objects/Lead/fields/ApproxStartDate__c.field-meta.xml
<CustomField>
    <fullName>ApproxStartDate__c</fullName>
    <label>Approx Start Date</label>
    <type>Date</type>
</CustomField>