force-app/main/default/objects/Lead/fields/ConfirmCrossStreet__c.field-meta.xml
<CustomField>
    <fullName>ConfirmCrossStreet__c</fullName>
    <label>Confirm Cross Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>