force-app/main/default/objects/Lead/fields/ContractingWith__c.field-meta.xml
<CustomField>
    <fullName>ContractingWith__c</fullName>
    <inlineHelpText>If Lead is under Contract</inlineHelpText>
    <label>Contracting With</label>
    <length>250</length>
    <type>Text</type>
</CustomField>