force-app/main/default/objects/Lead/fields/ConvertstoOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ConvertstoOpportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Converts to Opportunity</label>
    <type>Checkbox</type>
</CustomField>