force-app/main/default/objects/Lead/fields/Email_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Email_Introduction__c</fullName>
    <defaultValue>&quot;We provide a full range of masonry services. There is some information attached to this email that further explains what it is that we do. Please feel free to contact us about anything that you may need.&quot;</defaultValue>
    <inlineHelpText>Introductory paragraph(s) for automated email. &lt;5,000 words approximately. Place to be personal and use names and titles and credit referrals.</inlineHelpText>
    <label>Email Introduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>