force-app/main/default/objects/Lead/fields/EmailSignature__c.field-meta.xml
<CustomField>
    <fullName>EmailSignature__c</fullName>
    <inlineHelpText>Final Paragraph in Email Template</inlineHelpText>
    <label>Email Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>