force-app/main/default/objects/Lead/fields/HasPlans__c.field-meta.xml
<CustomField>
    <fullName>HasPlans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Plans?</label>
    <type>Checkbox</type>
</CustomField>