force-app/main/default/objects/Lead/fields/HasSelections__c.field-meta.xml
<CustomField>
    <fullName>HasSelections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Selections?</label>
    <type>Checkbox</type>
</CustomField>