force-app/main/default/objects/Lead/fields/HasWrittenLineItems__c.field-meta.xml
<CustomField>
    <fullName>HasWrittenLineItems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Written Line Items?</label>
    <type>Checkbox</type>
</CustomField>