force-app/main/default/objects/Lead/fields/HasWrittenScopeofWork__c.field-meta.xml
<CustomField>
    <fullName>HasWrittenScopeofWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Written Scope of Work?</label>
    <type>Checkbox</type>
</CustomField>