force-app/main/default/objects/Lead/fields/Info_About_Lead__c.field-meta.xml
<CustomField>
    <fullName>Info_About_Lead__c</fullName>
    <inlineHelpText>All Notes and Info about the Lead&apos;s Job, Company, etc. This will transfer to the Opportunity when Converted.</inlineHelpText>
    <label>Info About Lead</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>