force-app/main/default/objects/Lead/fields/JobSiteAddress__c.field-meta.xml
<CustomField>
    <fullName>JobSiteAddress__c</fullName>
    <label>Job Site Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>