force-app/main/default/objects/Lead/fields/JobSiteCity__c.field-meta.xml
<CustomField>
    <fullName>JobSiteCity__c</fullName>
    <label>Job Site City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>