force-app/main/default/objects/Lead/fields/JobSiteState__c.field-meta.xml
<CustomField>
    <fullName>JobSiteState__c</fullName>
    <defaultValue>&quot;NJ&quot;</defaultValue>
    <inlineHelpText>2 Character State Abbreviation</inlineHelpText>
    <label>Job Site State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>