force-app/main/default/objects/Lead/fields/JobSiteZipCode__c.field-meta.xml
<CustomField>
    <fullName>JobSiteZipCode__c</fullName>
    <label>Job Site Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>