force-app/main/default/objects/Lead/fields/KrowProject__c.field-meta.xml
<CustomField>
    <fullName>KrowProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Krow Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>