force-app/main/default/objects/Lead/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <defaultValue>TEXT(40.380980)</defaultValue>
    <description>used in jobsite address picker flow</description>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>