force-app/main/default/objects/Lead/fields/LeadIdforConversion__c.field-meta.xml
<CustomField>
    <fullName>LeadIdforConversion__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id for Conversion</label>
    <type>Text</type>
</CustomField>