force-app/main/default/objects/Lead/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <defaultValue>TEXT(-74.211470)</defaultValue>
    <description>used in jobsite address picker flow</description>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>