force-app/main/default/objects/Lead/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <inlineHelpText>City, Address (Client)</inlineHelpText>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>