force-app/main/default/objects/Lead/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selling Bullet Points to include in followup email.</description>
    <inlineHelpText>Selling Bullet Points to include in followup email.</inlineHelpText>
    <label>Price List</label>
    <type>Checkbox</type>
</CustomField>