force-app/main/default/objects/Lead/fields/Proposal_Process__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selling Bullet Points to include in followup email.</description>
    <inlineHelpText>Selling Bullet Points to include in followup email.</inlineHelpText>
    <label>Proposal Process</label>
    <type>Checkbox</type>
</CustomField>