force-app/main/default/objects/Lead/fields/ProposalDueDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalDueDate__c</fullName>
    <label>Proposal Due Date</label>
    <type>Date</type>
</CustomField>