force-app/main/default/objects/Lead/fields/Protection_Safety__c.field-meta.xml
<CustomField>
    <fullName>Protection_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selling Bullet Points to include in followup email.</description>
    <inlineHelpText>Selling Bullet Points to include in followup email.</inlineHelpText>
    <label>Protection &amp; Safety</label>
    <type>Checkbox</type>
</CustomField>