force-app/main/default/objects/Lead/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selling Bullet Points to include in followup email.</description>
    <inlineHelpText>Selling Bullet Points to include in followup email.</inlineHelpText>
    <label>References</label>
    <type>Checkbox</type>
</CustomField>