force-app/main/default/objects/Lead/fields/Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selling Bullet Points to include in followup email.</description>
    <inlineHelpText>Selling Bullet Points to include in followup email.</inlineHelpText>
    <label>Scheduling</label>
    <type>Checkbox</type>
</CustomField>