force-app/main/default/objects/Lead/fields/Second_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Second_Contact_Phone__c</fullName>
    <label>Second Contact Phone</label>
    <type>Phone</type>
</CustomField>