force-app/main/default/objects/Lead/fields/Second_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Second_Contact_Title__c</fullName>
    <label>Second Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>