force-app/main/default/objects/Lead/fields/Second_Email__c.field-meta.xml
<CustomField>
    <fullName>Second_Email__c</fullName>
    <label>Second Email</label>
    <type>Email</type>
</CustomField>