force-app/main/default/objects/Lead/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selling Bullet Points to include in followup email.</description>
    <inlineHelpText>Selling Bullet Points to include in followup email.</inlineHelpText>
    <label>Service</label>
    <type>Checkbox</type>
</CustomField>