force-app/main/default/objects/Lead/fields/StandardLeadTasks__c.field-meta.xml
<CustomField>
    <fullName>StandardLeadTasks__c</fullName>
    <description>Used in Kreate Lead Task FLOW</description>
    <label>Standard Lead Tasks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enter Notes From Paper</fullName>
                <default>true</default>
                <label>Enter Notes From Paper</label>
            </value>
            <value>
                <fullName>Send Follow Up Email</fullName>
            </value>
            <value>
                <fullName>Send Special Email</fullName>
            </value>
            <value>
                <fullName>Convert To Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>