force-app/main/default/objects/Lead/fields/Temp_Location_of_Plans__c.field-meta.xml
<CustomField>
    <fullName>Temp_Location_of_Plans__c</fullName>
    <inlineHelpText>sales gmail, slack, etc</inlineHelpText>
    <label>Temp Location of Plans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>