force-app/main/default/objects/Lead/fields/Third_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Third_Contact_Phone__c</fullName>
    <label>Third Contact Phone</label>
    <type>Phone</type>
</CustomField>