force-app/main/default/objects/Lead/fields/Third_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Third_Contact_Title__c</fullName>
    <label>Third Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>