force-app/main/default/objects/Lead/fields/Third_Email__c.field-meta.xml
<CustomField>
    <fullName>Third_Email__c</fullName>
    <label>Third Email</label>
    <type>Email</type>
</CustomField>