force-app/main/default/objects/Lead/fields/Your_Customer__c.field-meta.xml
<CustomField>
    <fullName>Your_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selling Bullet Points to include in email</inlineHelpText>
    <label>Your Customer</label>
    <type>Checkbox</type>
</CustomField>