force-app/main/default/objects/Lead/recordTypes/Cold_Call.recordType-meta.xml
<RecordType>
    <fullName>Cold_Call</fullName>
    <active>true</active>
    <businessProcess>Cold Call</businessProcess>
    <label>Cold Call / New Commercial</label>
</RecordType>