force-app/main/default/objects/Lead/recordTypes/Existing_Account.recordType-meta.xml
<RecordType>
    <fullName>Existing_Account</fullName>
    <active>true</active>
    <businessProcess>Existing Account</businessProcess>
    <label>Existing Professional Account</label>
</RecordType>