force-app/main/default/objects/Lead/recordTypes/Incoming_HO_Call.recordType-meta.xml
<RecordType>
    <fullName>Incoming_HO_Call</fullName>
    <active>true</active>
    <businessProcess>Cold Call</businessProcess>
    <label>Incoming H/O Call</label>
</RecordType>