force-app/main/default/objects/Lead/recordTypes/Job_Site.recordType-meta.xml
<RecordType>
    <fullName>Job_Site</fullName>
    <active>true</active>
    <businessProcess>Job Site</businessProcess>
    <label>Job Site</label>
</RecordType>