force-app/main/default/objects/Lead/validationRules/Require_Opportunity_Name_Before_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Opportunity_Name_Before_Convert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsConverted,
ISBLANK(OpportunityName__c)
)</errorConditionFormula>
    <errorMessage>Opportunity Name is Required under &quot;Potential Jobsite Info&quot;</errorMessage>
</ValidationRule>