force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archived__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Leads</label>
</ListView>