force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Stage_Opportunity</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Dead</value>
    </filters>
    <filters>
        <field>Archived__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Open Leads</label>
</ListView>